# savings-mirror

./: .gitignore  Cargo.toml  LICENSE  README.md  README.nl.md  TEST-RESULTS.md
assets/: dashboard.html
docs/intelligence/: 2026-05-28-billing-mode-research.md
salvage/T-SM-BILLING-TOKENS-01/: README.md  dashboard.html.salvaged  main.rs.salvaged  sovacount.rs.salvaged
salvage/T-SM-OAUTH-FIX-01/: README.md  billing.rs.salvaged  main.rs.salvaged
savings-mirror-launcher/: Cargo.toml
savings-mirror-launcher/assets/: icon.icns
savings-mirror-launcher/src/: main.rs
savings-mirror-launcher/src/platform/: macos.rs  mod.rs  windows.rs
scripts/: bjorn-eigen-prompts-test.py  build-app.sh  controle-run-v2.py  controle-run.py  controle-sovacount-real.py  kwaliteits-check.py
src/: billing.rs  caveman.rs  main.rs  mode_history.rs  sovacount.rs
tests/: billing_integration.rs
