[package]
name = "savings-mirror"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Bjorn Lambrechts"]
license = "MIT"
description = "Local read-only savings tracker for AI tooling: aggregates caveman + sovacount cost reductions."
readme = "README.md"

[[bin]]
name = "savings-mirror"
path = "src/main.rs"

[dependencies]
axum       = { version = "0.8", default-features = false, features = ["tokio", "http1", "json"] }
tokio      = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "time"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir    = "2"
chrono     = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow     = "1"

[dev-dependencies]
mockito  = "1.7"
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[profile.release]
strip       = true
lto         = "thin"
codegen-units = 1
opt-level   = 3
